<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/login_user_name"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:id="@+id/textView1"
        android:layout_alignBaseline="@+id/reg_name"
        android:layout_alignBottom="@+id/reg_name"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:textSize="18sp"
        android:layout_marginTop="105dp"
        android:id="@+id/reg_name"
        android:layout_marginStart="17dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textView1" />

    <TextView
        android:text="@string/login_user_password"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:id="@+id/textView3"
        android:layout_below="@+id/reg_name"
        android:layout_alignStart="@+id/textView1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignEnd="@+id/reg_name"
        android:id="@+id/reg_password" />

    <Button
        android:text="@string/login_register_ensure"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:id="@+id/reg_ensure_btn"
        android:background="@mipmap/login_button_nor"
        android:layout_below="@+id/reg_password"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
