<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e7e7e7"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="132dp"
        android:layout_height="132dp"
        android:layout_gravity="center"
        android:layout_marginTop="68dp"
        android:src="@mipmap/login_bk" />

    <LinearLayout
        android:id="@+id/login_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/login_input"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/userId_LinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/login_edtId"
                    android:layout_width="0dp"
                    android:layout_height="44dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:ems="10"
                    android:maxLines="1"
                    android:hint="@string/login_user_name"
                    android:layout_marginTop="20dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColorHint="#999999"
                    android:textSize="18sp" >
                    <requestFocus />
                </EditText>

                <ImageView
                    android:id="@+id/login_more_user"
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="15dp"
                    android:src="@mipmap/login_more_up" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#CACDD1" />

            <EditText
                android:id="@+id/login_edtPwd"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@null"
                android:hint="@string/login_user_password"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:paddingEnd="0dp"
                android:textColorHint="#999999"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/login_btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:background="@mipmap/login_button_nor"
                android:text="@string/login_btn_text"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />
            <Button
                android:id="@+id/login_btnReg"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_marginTop="20dp"
                android:background="@mipmap/login_button_nor"
                android:layout_marginStart="120dp"
                android:text="@string/login_register"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/login_txtForgotPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:text="@string/login_forget_pwd"
        android:textColor="#0079FF"
        android:textSize="18sp" />

</LinearLayout>